--- a/models/silver/labels/contract_autolabel/ethereum/silver__labels_contracts_blast.yml
+++ b/models/silver/labels/contract_autolabel/ethereum/silver__labels_contracts_blast.yml
@@ -11,7 +11,7 @@ models:
         tests:
           - not_null
           - dbt_expectations.expect_column_values_to_be_in_set:
-              value_set: ['base']
+              value_set: ['blast']
       - name: ADDRESS
         description: Address that the label is for. This is the field that should be used to join other tables with labels. 
         tests:
